Upgrade auf Java 21: Record, var, final fields, moderne Idiome
- GoToKey von innerer Klasse zu Java Record migriert
- Alle Felder als final deklariert, buildDelta() gibt TreeMap zurueck
- var fuer lokale Variablen, List.of() statt Arrays.asList()
- TreeSet statt TreeMap<Character, Boolean> fuer Alphabet
- pom.xml und README auf Java 21 aktualisiert

https://claude.ai/code/session_012g6V4S3YdvUgr9C3R1f3a6